Splitted the pipelines in smaller ones so that modular pipelines can be joined arbitrary to customize for Uraniborg.

--- a/notebooks/02.2_clean_trip_statistics_uraniborg.ipynb
+++ b/notebooks/02.2_clean_trip_statistics_uraniborg.ipynb
@@ -134,22 +134,8 @@
    },
    "outputs": [],
    "source": [
-    "%reload_kedro\n",
-    "df_stat = catalog.load('uraniborg.trip_statistics_clean')\n",
-    "#df_stat = catalog.load('uraniborg.trip_statistics')\n",
-    "df_stat['start_time'] = pd.to_datetime(df_stat['start_time'], utc=True)\n",
-    "df_stat['end_time'] = pd.to_datetime(df_stat['end_time'], utc=True)\n",
+    "df_stat = catalog.load('tycho.trip_statistics')\n",
     "df_stat.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fbc9d5f4-d0f1-479a-afb3-00aa98d106ac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_stat.head()"
    ]
   },
   {
@@ -193,41 +179,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "798e1abe-b0de-45be-902d-49149ba29c00",
-   "metadata": {},
+   "id": "473dd188",
+   "metadata": {
+    "papermill": {
+     "duration": 0.218799,
+     "end_time": "2021-05-21T15:53:23.234510",
+     "exception": false,
+     "start_time": "2021-05-21T15:53:23.015711",
+     "status": "completed"
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "sns.displot(df_stat, x='distance', aspect=3);"
+    "df_stat.describe()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a078c7f-4eac-4b71-9449-24b3d39dd091",
+   "cell_type": "markdown",
+   "id": "46d9b7d6-1002-4ad5-80a9-aadf52de7253",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "sns.displot(df_stat, x='trip_time', aspect=3);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3afab4e6-982a-4fbd-bc0b-75cb22f6b6d0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_stat[\"consumption\"] = df_stat[\"Consumption ME1 (L)\"] + df_stat[\"Consumption ME2 (L)\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1768cfa9-9f0e-4f91-b4f9-ecedaf4cb7d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sns.displot(df_stat, x='consumption', aspect=3);"
+    "# Clean"
    ]
   },
   {
@@ -288,60 +261,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8a0b6c45-bcab-4c76-b835-efb7f620417d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f0a18f24-93f8-4179-9baa-96c0556d2541",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "facegrid = sns.relplot(data=df_stat, x='start_time',y='consumption', height=3, aspect=3);\n",
-    "facegrid.set_ylabels('(Fuel consumption per trip) [l]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d69e45a2-1125-4cf1-b9d6-069af52cd868",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_ = df_stat.set_index('start_time')\n",
-    "\n",
-    "df_rolling = df_.rolling(window=10).mean().dropna()\n",
-    "\n",
-    "facegrid = sns.relplot(data=df_rolling, x='start_time', y='consumption', height=3, aspect=3);\n",
-    "facegrid.set_ylabels('(Fuel consumption per trip) [l]')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bffbd226-88d0-4e57-b72f-ba0b3711b105",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9177fead-9cec-433f-a356-75f28eec294f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41ad3a4d-26db-4404-880e-517d4b44c900",
    "metadata": {},
    "outputs": [],
    "source": []
