--- a/notebooks/07.01_uraniborg.ipynb
+++ b/notebooks/07.01_uraniborg.ipynb
@@ -32,6 +32,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "42de8f88-1498-4f1a-9c30-bcd89c2e2c79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.iloc[0]['UTC time']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6b412497-7daa-45ae-95c1-8b3df254073d",
    "metadata": {},
    "outputs": [],
