Identified approx. 6% fuel saving after 10th May

--- a/notebooks/02.2_clean_trip_statistics.ipynb
+++ b/notebooks/02.2_clean_trip_statistics.ipynb
@@ -315,8 +315,11 @@
    "outputs": [],
    "source": [
     "df_ = df_stat.set_index('start_time')\n",
+    "df_.sort_index(inplace=True)\n",
     "\n",
-    "df_rolling = df_.rolling(window=10).mean().dropna()\n",
+    "window = \"10D\"\n",
+    "df_rolling = df_.rolling(window=window).mean().iloc[20:]\n",
+    "df_expanding = df_.expanding().mean().iloc[20:]\n",
     "\n",
     "facegrid = sns.relplot(data=df_rolling, x='start_time', y='consumption', height=3, aspect=3);\n",
     "facegrid.set_ylabels('(Fuel consumption per trip) [l]')"
@@ -328,7 +331,9 @@
    "id": "bffbd226-88d0-4e57-b72f-ba0b3711b105",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_.iloc[0].name"
+   ]
   },
   {
    "cell_type": "code",
@@ -336,12 +341,79 @@
    "id": "9177fead-9cec-433f-a356-75f28eec294f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "utbildning = '2021-05-10'\n",
+    "df_before = df_.loc[:utbildning]\n",
+    "df_after = df_.loc[utbildning:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c496af-db5c-4fe6-877d-9e3ff5094e4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(20,7)\n",
+    "\n",
+    "df_before.plot(y='consumption', label='before', ax=ax, style='b.')\n",
+    "df_after.plot(y='consumption', label='after', ax=ax, style='g.')\n",
+    "\n",
+    "df_rolling.plot(y='consumption', label=f'rolling mean ({window})', ax=ax, style='-')\n",
+    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='-')\n",
+    "ax.legend();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf7eed6e-049c-4388-855b-8a7c5439ae44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(20,7)\n",
+    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='-')\n",
+    "ax.set_ylim(df_expanding['consumption'].min(),df_before['consumption'].mean())\n",
+    "ax.legend();"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "41ad3a4d-26db-4404-880e-517d4b44c900",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interesting = ['sog','distance', 'consumption']\n",
+    "df_before[interesting].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd5b3fcb-746f-47ca-8f3c-8d575191c83e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_after[interesting].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89b4fa2d-1dd7-4098-80d6-96b51ac8d932",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df_before['consumption'].mean()-df_after['consumption'].mean())/df_before['consumption'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1136d08b-3de0-4a72-992a-5b4a9d74a0b9",
    "metadata": {},
    "outputs": [],
    "source": []
