Rerun with correct periods.

--- a/notebooks/02.2_clean_trip_statistics.ipynb
+++ b/notebooks/02.2_clean_trip_statistics.ipynb
@@ -310,15 +310,59 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d69e45a2-1125-4cf1-b9d6-069af52cd868",
+   "id": "5aabe0e4-b3e5-497b-b15b-8858e095d03d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_ = df_stat.set_index('start_time')\n",
     "df_.sort_index(inplace=True)\n",
     "\n",
-    "window = \"10D\"\n",
-    "df_rolling = df_.rolling(window=window).mean().iloc[20:]\n",
+    "df_['dt'] = np.concatenate(([0],np.diff((df_.index-df_.index[0]).total_seconds())))\n",
+    "\n",
+    "mask = df_['dt'] > 60*60*24*5\n",
+    "\n",
+    "mask[0]=True\n",
+    "df_.loc[mask,'group'] = np.arange(mask.sum())\n",
+    "df_['group'] = df_['group'].fillna(method='pad')\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "\n",
+    "#df_.plot(y='dt', ax=ax)\n",
+    "df_.loc[mask].plot(y='dt', style='ro', ax=ax)\n",
+    "\n",
+    "for group, df_group in df_.groupby(by='group'):\n",
+    "    \n",
+    "    df_group.plot(y='dt', label=group, ax=ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6eff972-3914-49ad-84bd-b4aaf575bd50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "window = \"30D\"\n",
+    "\n",
+    "df_rolling = pd.DataFrame()\n",
+    "\n",
+    "for group, df_group in df_.groupby(by='group'):\n",
+    "\n",
+    "    df_rolling_ = df_group.rolling(window=window).mean().iloc[10:]\n",
+    "    df_rolling_['group'] = group\n",
+    "    df_rolling = df_rolling.append(df_rolling_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69e45a2-1125-4cf1-b9d6-069af52cd868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "df_expanding = df_.expanding().mean().iloc[20:]\n",
     "\n",
     "facegrid = sns.relplot(data=df_rolling, x='start_time', y='consumption', height=3, aspect=3);\n",
@@ -328,23 +372,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bffbd226-88d0-4e57-b72f-ba0b3711b105",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_.iloc[0].name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "9177fead-9cec-433f-a356-75f28eec294f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "utbildning = '2021-05-10'\n",
-    "df_before = df_.loc[:utbildning]\n",
-    "df_after = df_.loc[utbildning:]\n"
+    "tänd = '2021-04-01'\n",
+    "utbildning = '2021-05-11'\n",
+    "\n",
+    "df_.loc[:tänd,'period'] = 'släckta skärmar'\n",
+    "df_.loc[tänd:utbildning,'period'] = 'tända skärmar'\n",
+    "df_.loc[utbildning:,'period'] = 'efter utbildning'"
    ]
   },
   {
@@ -357,11 +394,17 @@
     "fig,ax=plt.subplots()\n",
     "fig.set_size_inches(20,7)\n",
     "\n",
-    "df_before.plot(y='consumption', label='before', ax=ax, style='b.')\n",
-    "df_after.plot(y='consumption', label='after', ax=ax, style='g.')\n",
+    "#df_before.plot(y='consumption', label='before', ax=ax, style='b.')\n",
+    "#df_after.plot(y='consumption', label='after', ax=ax, style='g.')\n",
     "\n",
-    "df_rolling.plot(y='consumption', label=f'rolling mean ({window})', ax=ax, style='-')\n",
-    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='-')\n",
+    "styles = ['k.','y.','b.']\n",
+    "for style, (period, df_period) in zip(styles,df_.groupby(by='period', sort=False)):\n",
+    "    df_period.plot(y='consumption', label=period, ax=ax, style=style)\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_rolling.plot(y='consumption', label=f'rolling mean ({window})', ax=ax, style='m-')\n",
+    "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='c-')\n",
     "ax.legend();"
    ]
   },
@@ -374,40 +417,27 @@
    "source": [
     "fig,ax=plt.subplots()\n",
     "fig.set_size_inches(20,7)\n",
+    "\n",
+    "for group, df_rolling_group in df_rolling.groupby(by='group'):\n",
+    "    df_rolling_group.plot(y='consumption', label=f'rolling mean', ax=ax, style='-')\n",
+    "\n",
+    "\n",
     "df_expanding.plot(y='consumption', label=f'expanding mean', ax=ax, style='-')\n",
-    "ax.set_ylim(df_expanding['consumption'].min(),df_before['consumption'].mean())\n",
+    "\n",
+    "ax.set_ylim(0.85*df_before['consumption'].mean(),1.1*df_before['consumption'].mean())\n",
     "ax.legend();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ad3a4d-26db-4404-880e-517d4b44c900",
+   "id": "d770d101-4515-4629-9737-59cf2d8744be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interesting = ['sog','distance', 'consumption']\n",
-    "df_before[interesting].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd5b3fcb-746f-47ca-8f3c-8d575191c83e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_after[interesting].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89b4fa2d-1dd7-4098-80d6-96b51ac8d932",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(df_before['consumption'].mean()-df_after['consumption'].mean())/df_before['consumption'].mean()"
+    "interesting = ['sog','consumption','distance','aw']\n",
+    "df_compare = df_.groupby(by='period', sort=False).mean()[interesting]\n",
+    "df_compare"
    ]
   },
   {
@@ -416,7 +446,25 @@
    "id": "1136d08b-3de0-4a72-992a-5b4a9d74a0b9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "M = np.tile(df_compare['consumption'],(len(df_compare),1))\n",
+    "changes = np.triu(M - M.T)\n",
+    "df_changes = pd.DataFrame(changes, index=df_compare.index, columns=df_compare.index)\n",
+    "\n",
+    "columns = df_changes.columns[~(df_changes==0).all(axis=0)]\n",
+    "rows = df_changes.index[~(df_changes==0).all(axis=1)]\n",
+    "df_changes = df_changes.loc[rows,columns].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e40ea76-0106-469a-a6c0-86d8e8d478ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(df_changes/df_compare.loc['släckta skärmar']['consumption'])*100"
+   ]
   }
  ],
  "metadata": {
