Worked a bit more on the report.

--- a/docs/energy_saving_potential/following_trips.ipynb
+++ b/docs/energy_saving_potential/following_trips.ipynb
@@ -42,6 +42,9 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as pltb\n",
@@ -99,7 +102,7 @@
     "\n",
     "df.sort_values(by='start_time', inplace=True)\n",
     "\n",
-    "df['E']/=(10**6) # --> [MNm]"
+    "df['E']/=3600  #--> [kWh]\n"
    ]
   },
   {
@@ -131,7 +134,7 @@
    "outputs": [],
    "source": [
     "facegrid = sns.relplot(data=df, x='start_time',y='E', hue='ship', height=3, aspect=3);\n",
-    "facegrid.set_ylabels('E (Energy consumption per trip) [MNm]')\n",
+    "facegrid.set_ylabels('E (Energy consumption per trip) [kWh]')\n",
     "\n",
     "glue('fig:tycho-aurora', facegrid.fig, display=False)"
    ]
@@ -189,14 +192,14 @@
    "outputs": [],
    "source": [
     "facegrid = sns.relplot(data=df_cut, x='start_time',y='E', hue='ship', height=3, aspect=3);\n",
-    "facegrid.set_ylabels(\"E (Energy consumption) [MNm]\", clear_inner=False)\n",
+    "facegrid.set_ylabels(\"E (Energy consumption) [kWh]\", clear_inner=False)\n",
     "glue('fig:tycho-aurora-cut', facegrid.fig, display=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a09c5d2a-c031-463e-aa38-c97c604defb3",
+   "id": "3f24abbe-1258-4145-a119-9bee2d095feb",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -204,7 +207,14 @@
    },
    "outputs": [],
    "source": [
-    "sns.displot(df_cut, x='P', hue='ship', kind=\"kde\", bw_adjust=0.5, height=3, aspect=3)"
+    "grid = sns.displot(df_cut, x='sog', hue='ship', kind=\"kde\", bw_adjust=1, height=3, aspect=3)\n",
+    "ax = grid.fig.axes[0]\n",
+    "ax.set_xticks(np.arange(3,6,0.25))\n",
+    "\n",
+    "ax.annotate('Tycho higher speeds', (4.45,0.8))\n",
+    "ax.annotate('Aurora higher speeds', (4.80,0.17))\n",
+    "\n",
+    "glue('fig:sog_distribution',grid.fig, display=False)"
    ]
   },
   {
@@ -218,13 +228,14 @@
    },
    "outputs": [],
    "source": [
-    "sns.displot(df_cut, x='E', hue='ship', kind=\"kde\", bw_adjust=1, height=3, aspect=3)"
+    "grid = sns.displot(df_cut, x='E', hue='ship', kind=\"kde\", bw_adjust=1, height=3, aspect=3)\n",
+    "glue('fig:energy_distribution',grid.fig, display=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "242195e8-f6e0-489d-82f2-d132afb2c80c",
+   "id": "52f3fa14-dc98-4b70-96e8-57c872415f62",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -232,35 +243,19 @@
    },
    "outputs": [],
    "source": [
-    "table_tycho = df_tycho[['sog','E']].describe()\n",
-    "table_tycho.rename(\n",
+    "df_mean = df_cut.groupby(by='ship').mean()[['sog','E', 'distance']]\n",
+    "\n",
+    "df_mean.rename(\n",
     "    columns={'sog':'sog [m/s]',\n",
-    "            'P':'P [kW]',}, inplace=True)\n",
+    "            'E':'E [kWh]',\n",
+    "            'distance':'Trip distance [m]',}, inplace=True)\n",
     "\n",
     "formatter = {\n",
     "'sog [m/s]' : '{:.2f}',\n",
-    "'P [kW]' : '{:.0f}',\n",
+    "'E [kWh]' : '{:.0f}',\n",
+    "'Trip distance [m]' : '{:.0f}',\n",
     "}\n",
-    "glue('tab:tycho',table_tycho.style.format(formatter))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "350bdeef-a819-4b9a-ba2f-30cd4dacd786",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "table_aurora = df_aurora[['sog','E']].describe()\n",
-    "table_aurora.rename(\n",
-    "    columns={'sog':'sog [m/s]',\n",
-    "            'P':'P [kW]',}, inplace=True)\n",
-    "\n",
-    "glue('tab:aurora',table_aurora.style.format(formatter))"
+    "glue('tab:mean',df_mean.style.format(formatter))"
    ]
   },
   {
@@ -283,17 +278,28 @@
    "id": "a4440db8-5395-41a5-a468-16b87be29e0f",
    "metadata": {},
    "source": [
-    "The statistics in {numref}`tab:tycho` and {numref}`tab:aurora` show that the energy consumption is very similar for the two ships. The mean energy consumption only differs {glue:}`E_pct_diff`%. The sister ships should therefore have similar possibilites to minimize the energy consumption. Two following trips: one with Aurora and one with Tycho Brahe in the same direction and closest in time can be paired. These pairs can be compared, and since the time window is now very small (less than 1 hour), the difference in energy consumption should come from the operation of the ships. To further contrain the pairs, only pairs where the mean wind speed recorded onboard the ships differs less than {glue:}`w_max_diff` m/s between the ships is included in the anlysis.\n",
+    "{numref}`fig:sog_distribution` shows the distribution of trip average speed for all the trips with the two ships. It can be seen that Tycho Brahe has a higher average trip speed more ofthen than Aurora. In the higher speed range (above 4.75 m/s) Aurora has more trips however. Aurora sometimes have emergency trips, carrying ambulances, which probably explaines this. \n",
     "\n",
-    "```{glue:figure} tab:tycho\n",
-    ":name: \"tab:tycho\"\n",
-    "Tycho statistics\n",
+    "```{glue:figure} fig:sog_distribution\n",
+    ":name: \"fig:sog_distribution\"\n",
+    "Distribution of Speed over ground [m/s]\n",
     "```\n",
     "\n",
-    "```{glue:figure} tab:aurora\n",
-    ":name: \"tab:aurora\"\n",
-    "Aurora statistics\n",
-    "```\n"
+    "The similar trends can also be seen in the trip Energy consumption distribution as a as seen in {numref}`fig:energy_distribution`.\n",
+    "\n",
+    "```{glue:figure} fig:energy_distribution\n",
+    ":name: \"fig:energy_distribution\"\n",
+    "Distribution of Energy consumption [kWh]\n",
+    "```\n",
+    "\n",
+    "Eventhough Aurora often has a lower average trip speed, the emergency trips is balancing this, so that the total mean speed is the same for both ships as seen in {numref}`tab:mean`. This table also show that the mean energy consumption differs {glue:}`E_pct_diff`% in favor of Aurora. Aurora has a little bit lower energy consumption, but the difference is quite small. \n",
+    "\n",
+    "```{glue:figure} tab:mean\n",
+    ":name: \"tab:mean\"\n",
+    "Trip mean values\n",
+    "```\n",
+    "\n",
+    "The sister ships should therefore have similar possibilites to minimize the energy consumption. Two following trips: one with Aurora and one with Tycho Brahe in the same direction and closest in time can be paired. These pairs can be compared, and since the time window is now very small (less than 1 hour), the difference in energy consumption should come from the operation of the ships. To further constrain the pairs, only pairs where the mean wind speed recorded onboard the ships differs less than {glue:}`w_max_diff` m/s between the ships is included in the anlysis.\n"
    ]
   },
   {
@@ -427,7 +433,7 @@
     "Energy saving potential\n",
     "```\n",
     "\n",
-    "The difference in speed (x-axis) is plotted againast the difference in mean power (y-axis) for the trip pairs in {numref}`fig:sog_following_Helsingborg-Helsingør` and {numref}`fig:sog_following_Helsingør-Helsingborg`. It can be seen from these figures that the mean power difference has a high correlation with the speed difference and therefore seems to be the main explaination to why the energy consumption differs."
+    "The difference in speed (x-axis) is plotted againast the difference in mean power (y-axis) for the trip pairs in {numref}`fig:sog_following_Helsingborg-Helsingør` and {numref}`fig:sog_following_Helsingør-Helsingborg`. It can be seen from these figures that the mean power difference has a high correlation with the speed difference and therefore seems to be the main explaination to why the energy consumption differs. This is however not the only explaination which will be further investigated in the Outliers section below."
    ]
   },
   {
@@ -461,20 +467,214 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fd0b3741-2758-4634-ab0e-017b17344c03",
+   "cell_type": "markdown",
+   "id": "199793cd-dcf9-48fa-8fbf-c011b4685161",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Outliers"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "51f9168e-f5ca-4121-97cf-8a8ed01daf03",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "remove_input",
+     "remove_cell"
+    ]
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "group_directions = df_following.groupby('trip_direction')\n",
+    "df_ = group_directions.get_group('Helsingør-Helsingborg').copy()\n",
+    "mask = df_['sog_aurora - sog_tycho'].abs() < 0.5\n",
+    "df_ = df_.loc[mask].copy()\n",
+    "\n",
+    "df_['outlier_factor'] = (df_['E_aurora - E_tycho']/df_['sog_aurora - sog_tycho']**(1)).abs()\n",
+    "df_ = df_.sort_values(by='outlier_factor', ascending=False)\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "df_.plot(x='sog_aurora - sog_tycho', y='E_aurora - E_tycho', style='b.', label='pairs', ax=ax)\n",
+    "\n",
+    "outlier_1 = df_.iloc[0]\n",
+    "outlier_2 = df_.iloc[7]\n",
+    "\n",
+    "df_.loc[[outlier_1.name]].plot(x='sog_aurora - sog_tycho', y='E_aurora - E_tycho', style='ro', label='outlier 1', ax=ax)\n",
+    "df_.loc[[outlier_2.name]].plot(x='sog_aurora - sog_tycho', y='E_aurora - E_tycho', style='go', label='outlier 2', ax=ax)\n",
+    "\n",
+    "ax.set_xlabel('sog_aurora - sog_tycho')\n",
+    "ax.set_ylabel('E_aurora - E_tycho')\n",
+    "ax.legend();\n",
+    "glue(\"fig:outliers\", fig, display=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "570b6b12-0859-4b4b-ab53-dc6f8d81a133",
+   "metadata": {},
+   "source": [
+    "Some of the pairs have similar speeds but still differ in energy consumption. Two of these \"outliers\" have been selected according to {numref}`fig:outliers`.\n",
+    "\n",
+    "```{glue:figure} fig:outliers\n",
+    ":name: \"fig:outliers\"\n",
+    ":figwidth: 800px\n",
+    "Two outliers where Energy consumption differs a lot but speed does not differ.\n",
+    "```\n",
+    "A closer look at the time series of these pairs will be conducted below.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8af96a61-30a3-416d-9438-eca9c0eb7010",
+   "metadata": {},
+   "source": [
+    "### Outlier 1\n",
+    "Outlier 1 is the red dot in {numref}`fig:outliers` where the energy consumption is lower for Aurora eventhough the average speed is the same for both ships (sog_aurora - sog_tycho = 0). The track plot is shown below together with time series of Power, cumulative energy consumption (energy consumed since start of trip) and speed over ground (sog)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af329983-c049-4796-8615-d779006b35e9",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "df_tycho_time = catalog.load(\"tycho.data_with_trip_columns\")\n",
+    "df_aurora_time = catalog.load(\"aurora.data_with_trip_columns\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316d216e-e0fc-48ca-860b-621afc7de65a",
+   "metadata": {
+    "tags": [
+     "remove_input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "trip_tycho = df_tycho_time.groupby(by='trip_no').get_group(outlier_1.trip_no_tycho)\n",
+    "trip_aurora = df_aurora_time.groupby(by='trip_no').get_group(outlier_1.trip_no_aurora)\n",
+    "\n",
+    "E = cumtrapz(y=trip_tycho['P'], x=trip_tycho['trip_time'])/3600\n",
+    "trip_tycho['E'] = np.concatenate([[0],E])\n",
+    "\n",
+    "E = cumtrapz(y=trip_aurora['P'], x=trip_aurora['trip_time'])/3600\n",
+    "trip_aurora['E'] = np.concatenate([[0],E])\n",
+    "\n",
+    "display(visualize.plot_map(trip_tycho))\n",
+    "display(visualize.plot_map(trip_aurora))\n",
+    "\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='P', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='P', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('P [kW]')\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='E', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='E', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('E [kWh]');\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='sog', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='sog', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('sog [m/s]');\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "559d052d-54ee-453f-add4-6fb7f4212ebe",
+   "metadata": {},
+   "source": [
+    "It can be seen that Aurora has a lower and stable speed that is maintined for a longer part of the trip giving a lower energy consumption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51bd90a9-d7b1-45e5-b491-9d905f4e8955",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Outlier 2\n",
+    "Outlier 2 is the green dot in {numref}`fig:outliers` where the energy consumption is higher for Aurora eventhough the average speed is the same for both ships (sog_aurora - sog_tycho = 0). The track plot is shown below together with time series of Power, cumulative energy consumption (energy consumed since start of trip) and speed over ground (sog)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a1fde99-7033-4afd-8214-5ae3710b5097",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import cumtrapz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52bdc00b-13c1-42c1-976c-75c32ca1ef35",
+   "metadata": {
+    "tags": [
+     "remove_input"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "trip_tycho = df_tycho_time.groupby(by='trip_no').get_group(outlier_2.trip_no_tycho)\n",
+    "trip_aurora = df_aurora_time.groupby(by='trip_no').get_group(outlier_2.trip_no_aurora)\n",
+    "\n",
+    "E = cumtrapz(y=trip_tycho['P'], x=trip_tycho['trip_time'])/3600\n",
+    "trip_tycho['E'] = np.concatenate([[0],E])\n",
+    "\n",
+    "E = cumtrapz(y=trip_aurora['P'], x=trip_aurora['trip_time'])/3600\n",
+    "trip_aurora['E'] = np.concatenate([[0],E])\n",
+    "\n",
+    "\n",
+    "display(visualize.plot_map(trip_tycho))\n",
+    "display(visualize.plot_map(trip_aurora))\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='P', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='P', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('P [kW]')\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='E', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='E', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('E [kWh]');\n",
+    "\n",
+    "fig,ax=plt.subplots()\n",
+    "fig.set_size_inches(15,6)\n",
+    "trip_tycho.plot(x='trip_time', y='sog', ax=ax, label='tycho');\n",
+    "trip_aurora.plot(x='trip_time', y='sog', ax=ax, label='aurora');\n",
+    "ax.set_ylabel('sog [m/s]');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0874f3e-3191-4fd2-a017-088671bb3f26",
+   "metadata": {},
+   "source": [
+    "In this case Tycho has a more stable speed and Aurora is making a large detour that is giving a higher energy consumption."
+   ]
   }
  ],
  "metadata": {
