--- a/notebooks/07.01_uraniborg.ipynb
+++ b/notebooks/07.01_uraniborg.ipynb
@@ -3,10 +3,23 @@
   {
    "cell_type": "markdown",
    "id": "9388f23f-d037-4905-906a-49edf33ef3a6",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Uraniborg\n",
     "![](https://ventrafiken.se/wp-content/uploads/2020/02/ura-20130125-655x311-1.png.webp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a10f735d-ea1a-4882-b9aa-315aac54187c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from d2e2f.visualization.visualize import plot_map\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -16,7 +29,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = catalog.load(f'uraniborg.raw_data')"
+    "loaders = catalog.load(f'uraniborg.raw_data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f786b35-b86e-4cfc-b82e-77a7af45e44c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = loaders['uraniborg-2021-05']()\n",
+    "df.index = pd.to_datetime(df['Timestamp'])\n",
+    "df.rename(columns={\n",
+    "'Latitude (deg)':'latitude',\n",
+    "'Longitude (deg)':'longitude',\n",
+    "'Course over ground (deg)':'cog',\n",
+    "    \n",
+    "}, inplace=True)"
    ]
   },
   {
@@ -32,50 +62,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42de8f88-1498-4f1a-9c30-bcd89c2e2c79",
+   "id": "d0003245-a05f-4670-be53-e1050db01890",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[0]['UTC time']"
+    "df.columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b412497-7daa-45ae-95c1-8b3df254073d",
+   "id": "6b44b3e4-8cb9-4163-899e-a23011edcb18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.describe()"
+    "plot_map(df=df,zoom_start=13)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "62815e4a-8002-4151-b878-6e3302a05ec9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8aecc0ef-afcb-4325-a5cb-224eb1f2c57a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dba8dba8-116d-46cb-b509-211a68aec2fa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
