started to create a simple dashboard.

--- a/docs/energy_saving_potential/following_trips.ipynb
+++ b/docs/energy_saving_potential/following_trips.ipynb
@@ -75,7 +75,8 @@
     "\n",
     "from d2e2f.visualization import visualize\n",
     "import re\n",
-    "from myst_nb import glue"
+    "from myst_nb import glue\n",
+    "from scipy.integrate import cumtrapz"
    ]
   },
   {
@@ -256,6 +257,16 @@
     "'Trip distance [m]' : '{:.0f}',\n",
     "}\n",
     "glue('tab:mean',df_mean.style.format(formatter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df1dff3-0fb4-4d2b-b913-bcce71e38485",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_mean.to_clipboard()"
    ]
   },
   {
@@ -614,20 +625,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a1fde99-7033-4afd-8214-5ae3710b5097",
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "from scipy.integrate import cumtrapz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "52bdc00b-13c1-42c1-976c-75c32ca1ef35",
    "metadata": {
     "tags": [
@@ -675,6 +672,14 @@
    "source": [
     "In this case Tycho has a more stable speed and Aurora is making a large detour that is giving a higher energy consumption."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "020fb7c0-438d-486f-b0b1-214beb3dd204",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
