Added the possibility to load dashboard from the comand line, specifying which ship to look at.
Also rebuild the pipeline a bit.

--- a/notebooks/07.02_uraniborg.ipynb
+++ b/notebooks/07.02_uraniborg.ipynb
@@ -61,6 +61,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "968af4fc-ab2e-466e-bbb7-ee093bc87a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw = catalog.load('uraniborg.preprocessed_data')\n",
+    "df_raw['aw'].isnull().count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8393566b-7684-4846-96e1-bdb3ebe4d8dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_raw.plot(y='aw')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "78811e7e-f3da-48ea-9f26-458dcdc12cc8",
    "metadata": {},
    "outputs": [],
@@ -69,7 +90,17 @@
     "#loaders = catalog.load(f'uraniborg.raw_data')\n",
     "\n",
     "df = catalog.load('uraniborg.data_with_trip_columns')\n",
-    "df = df.iloc[-10000:].copy()  # Taking just a few samples for demo"
+    "df = df.iloc[-200000:-100000].copy()  # Taking just a few samples for demo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee398eda-bf3e-4865-a8eb-257c7d4f3801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.plot(y='aw')"
    ]
   },
   {
@@ -157,7 +188,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trip = df.groupby('trip_no').get_group(1)\n",
+    "trips = df.groupby('trip_no')\n",
+    "trip_no = list(trips.groups.keys())[-199]\n",
+    "trip = trips.get_group(trip_no)\n",
+    "\n",
     "trip.head()"
    ]
   },
@@ -170,6 +204,14 @@
    "source": [
     "plot_map(trip)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc124ade-cb0c-476a-b38d-fb80507ddf54",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -215,7 +257,9 @@
    "id": "66a2c1c6-4a83-410a-8824-080391d8fd78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_statistics.hist(column='E', bins=100)"
+   ]
   },
   {
    "cell_type": "code",
@@ -223,25 +267,141 @@
    "id": "e7635283-a774-4218-9672-80dd56a88985",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_statistics.hist(column='aw', bins=100)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6205354-63e6-4485-95f6-4c3ebaf1b960",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "df685923-6704-4ceb-b978-894c7f33f31a",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "import re\n",
-    "regexp = re.compile(r'P\\d+$')\n",
-    "if regexp.search('P10g0'):\n",
-    "    print('yes')"
+    "## Apparent wind"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "a156d8ef-f113-49ff-97ba-6d879a0e0b88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "aw = trip['aw']\n",
+    "awa = np.deg2rad(trip['awa'])\n",
+    "sog = trip['sog']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a68832b-b6dc-47a5-95d9-807f5f404392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apparent_wind_to_true(sog, aw, awa):\n",
+    "    return np.sqrt(aw**2 + sog**2 - 2*aw*sog*np.cos(awa))\n",
+    "\n",
+    "def apparent_wind_angle_to_true(sog, aw, awa):\n",
+    "    return np.arccos((aw*np.cos(awa)-sog)/np.sqrt(aw**2 + sog**2 - 2*aw*sog*np.cos(awa)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc4ec78c-7bef-4fb4-a245-d3c9054b1eff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip['w'] = apparent_wind_to_true(sog=sog,aw=aw, awa=awa)\n",
+    "trip['wa'] = np.rad2deg(apparent_wind_angle_to_true(sog=sog,aw=aw, awa=awa))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1de31fff-970d-445d-a775-75f801f53a2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip.plot(y=['w','aw', 'sog'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d38e03f-fec4-4507-b292-ccabd1328602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip.plot(y=['wa','awa','heading'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21153180-e099-4048-9b77-0438f6a08751",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_statistics.loc[trip_no:trip_no+5][['trip_direction','heading','cog','awa','aw']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2df2cbfe-a2b5-4359-8571-4c249645dfdc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a714afe-c6d3-429b-897b-977ec7d29fac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f3ef91c-e4ec-4a12-bdb8-df7ead9be46e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8848fe7-0b88-45c1-b9cb-61b0ff95df5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sog = 0\n",
+    "aw = 1\n",
+    "awa = np.deg2rad(90)\n",
+    "\n",
+    "print(apparent_wind_to_true(sog=sog,aw=aw, awa=awa))\n",
+    "print(np.mod(np.rad2deg(apparent_wind_angle_to_true(sog=sog,aw=aw, awa=awa)),360))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f705003-5172-49e1-a07f-dc08de4bb3c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trip['trip_direction']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aac7fba9-477a-48d3-aae3-65e826936494",
    "metadata": {},
    "outputs": [],
    "source": []
